syntax = "proto3";

message Message {
    bytes sender_id = 1;
    bytes receiver_id = 2;
    bytes text_content = 3;
    repeated bytes byte_content = 4;
    int64 created_at = 5;
    optional sint32 type = 6;
}
